# DesignPatternConcepts-1

./: CMakeLists.txt  README.md
include/: Player.h
include/ui/: ButtonInterface.h  VerticalScrollBar.h
src/: Mp3AudioPlayer.cpp  Mp3AudioPlayer.h  Player.cpp
src/Common/: Common.h
src/Notification/: PlatformNotification.cpp  PlatformNotification.h
src/PlayBackStrategy/: HeadSetPlayBackStrategy.h  LoudSpeakerPlayBackStrategy.h  PlayBackStrategy.h
src/audiodriver/: AudioDriverFactory.h  LinuxAudioDriver.h  PlatformAudioDriver.h
src/audiodriver/impl/: LinuxAudioDriver.cpp
src/playerinterface/: PlayerInterface.h
src/playerinterface/audioplayer/: AudioPlayer.cpp  AudioPlayer.h
test/: PlayerTest.cpp
